.vscode/allianceuat_compare/force-app/main/default/objects/Client_Expense_Rule__c/Client_Expense_Rule__c.object-meta.xml
<CustomObject>
    <label>Client Expense Rule</label>
    <nameField>
        <displayFormat>CEXP-{0000}</displayFormat>
        <label>Client Expense Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Expense Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>