.vscode/allianceuat_compare/force-app/main/default/objects/Client_Expense_Rule__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>A distinct Markup dollar amount or margin percent that applies to a particular expense rule.</inlineHelpText>
    <label>Markup ($) / Margin (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>