.vscode/allianceuat_compare/force-app/main/default/objects/Client_Expense_Rule__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only associate client expense rules to client account records.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Expense Rules</relationshipLabel>
    <relationshipName>Client_Expense_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>