.vscode/allianceuat_compare/force-app/main/default/objects/Client_Expense_Rule__c/fields/Created_Manually__c.field-meta.xml
<CustomField>
    <fullName>Created_Manually__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates record was manually created.</description>
    <inlineHelpText>When checked, indicates the record was manually created.</inlineHelpText>
    <label>Created Manually</label>
    <type>Checkbox</type>
</CustomField>