.vscode/allianceuat_compare/force-app/main/default/objects/Client_Expense_Rule__c/fields/Do_Not_Auto_Copy_to_New_Child_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Auto_Copy_to_New_Child_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When TRUE, the expense will not be automatically created for new child accounts. It should be manually created or updated as needed.</description>
    <inlineHelpText>When checked, the expense will not be automatically created for new child accounts. It should be manually created or updated as needed.</inlineHelpText>
    <label>Do Not Auto-Copy to New Child Accounts</label>
    <type>Checkbox</type>
</CustomField>