.vscode/allianceuat_compare/force-app/main/default/objects/Client_Expense_Rule__c/fields/Exclude_from_Automation__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When TRUE, the expense record will not participate in automatic processes or updates. This exclusion should also extend to propagation and automatic updates.</description>
    <inlineHelpText>When checked, the expense record will not participate in automatic processes or updates.</inlineHelpText>
    <label>Exclude from Automation</label>
    <type>Checkbox</type>
</CustomField>