.vscode/allianceuat_compare/force-app/main/default/objects/Client_Expense_Rule__c/fields/Expense_Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>Expense_Pay_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Expense Pay Code</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only link an expense pay code to a client expense rule.</errorMessage>
        <filterItems>
            <field>tc9_pr__Pay_Code__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Expense</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Pay_Code__c</referenceTo>
    <relationshipLabel>Client Expense Rules</relationshipLabel>
    <relationshipName>Client_Expense_Rules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>