.vscode/allianceuat_compare/force-app/main/default/objects/Client_Expense_Rule__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>Expense_Pay_Code__r.tc9_et__Invoice_Name__c</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>