.vscode/allianceuat_compare/force-app/main/default/objects/Client_Expense_Rule__c/fields/Oncost_Setting__c.field-meta.xml
<CustomField>
    <fullName>Oncost_Setting__c</fullName>
    <label>Oncost Setting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Margin</fullName>
            </value>
            <value>
                <fullName>Markup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>