.vscode/allianceuat_compare/force-app/main/default/objects/Client_Expense_Rule__c/fields/Source_Expense_Rule__c.field-meta.xml
<CustomField>
    <fullName>Source_Expense_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The source (parent) Client Expense Rule this Client Expense Rule is derived from.</inlineHelpText>
    <label>Source Expense Rule</label>
    <referenceTo>Client_Expense_Rule__c</referenceTo>
    <relationshipLabel>Source Expense Rules</relationshipLabel>
    <relationshipName>Source_Expense_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>