.vscode/allianceuat_compare/force-app/main/default/objects/Client_Expense_Rule__c/fields/Update_with_Parent_Expense__c.field-meta.xml
<CustomField>
    <fullName>Update_with_Parent_Expense__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When TRUE, any changes in core fields (e.g., Markup Amount) at the parent level automatically update corresponding child record at every level of the hierarchy.</description>
    <inlineHelpText>When checked, changes in core fields at the parent level automatically update all corresponding child records.</inlineHelpText>
    <label>Update with Parent Expense</label>
    <type>Checkbox</type>
</CustomField>