.vscode/allianceuat_compare/force-app/main/default/objects/Client_Expense_Rule__c/recordTypes/Child_Expense.recordType-meta.xml
<RecordType>
    <fullName>Child_Expense</fullName>
    <active>true</active>
    <description>Expense from Child Client</description>
    <label>Child Expense</label>
</RecordType>