.vscode/allianceuat_compare/force-app/main/default/objects/Client_Expense_Rule__c/recordTypes/Parent_Expense.recordType-meta.xml
<RecordType>
    <fullName>Parent_Expense</fullName>
    <active>true</active>
    <description>Expense from Parent Client</description>
    <label>Parent Expense</label>
</RecordType>